# projectm-sdl-mac

./: .gitmodules  Cargo.toml  README.md  build_mac.sh
res/macos/: Info.plist  config.toml  icon.icns  run
src/: app.rs  dummy_audio.rs  main.rs
src/app/: audio.rs  config.rs  main_loop.rs  menu_bar.rs  playlist.rs  video.rs
