[package]
name = "projectm_sdl"
version = "0.1.1"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
libc = "0.2.185"
projectm = { version = "3.1.2", features = ["playlist", "static"] }
rand = "0.10.1"
include_dir = "0.7"
clap = { version = "4.6.1", features = ["derive", "env"] }
confique = { version = "0.4.0", features = ["toml", "yaml", "json5"] }
sdl3 = { version = "0.18.0", features = ["static-link", "build-from-source"] }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.18.0"

[features]
static-link = ["sdl3/static-link"]
dummy_audio = []
